2007-11-05  Mathias Hasselmann  <mathias@openismus.com>

	Move examples into separate folder.

	* examples/.gitignore, Makefile.am, tests/.gitignore:
	Moved test-consumer and test-publisher from tests to examples.
	* tests/test-consumer.c, tests/test-publisher.c: Moved to examples.

2007-11-05  Mathias Hasselmann  <mathias@openismus.com>

	Document epc_publisher_add_handler and related API.

	* docs/reference/libepc/libepc-sections.txt:
	Rename EpcPublisherHandler to EpcContentHandler.
	* libepc/publisher.c: Document epc_publisher_add_handler
	and EpcContent with its methods.
	* libepc/publisher.h: Document EpcContentHandler.

2007-11-05  Mathias Hasselmann  <mathias@openismus.com>

	Implement epc_publisher_add_handler.
	Rewrite epc_publisher_add and epc_publisher_add_file to use it.

	* docs/reference/libepc/libepc-sections.txt, libepc/publisher.c,
	libepc/publisher.h: Add epc_publisher_add_handler and EpcContent.
	* tests/test-publisher.c: Remove obsolete error variable.

2007-11-04  Mathias Hasselmann  <mathias@openismus.com>

	Document the property accessors of EpcDispatcher.

	* docs/reference/libepc/libepc-sections.txt,
	libepc/dispatcher.c: Document the property accessors.

2007-11-04  Mathias Hasselmann  <mathias@openismus.com>

	Implement regression tests for the EpcDispatcher.

	* Makefile.am, tests/.gitignore: Add regression tests.
	* tests/framework.c, tests/framework.h: Common test code.
	* tests/test-runner.sh: Redirect output of regression tests.
	* tests/test-dispatcher-simple-service.c: Test a single service.
	* tests/test-dispatcher-multiple-services.c: Test registering
	of multiple services on a single dispatcher.
	* tests/test-dispatcher-subtypes.c: Test service subtypes.
	* tests/test-dispatcher-local-collision.c: Test automatic handling
	of local service name collisions.
	* libepc/dispatcher.c, libepc/dispatcher.h:
	Add getter methods for properties of the EpcDispatcher.

2007-11-03  Mathias Hasselmann  <mathias@openismus.com>
